# team49-backup

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  JOURNAL.md  Makefile  README.md  THINGS NEED FIX.md  UI-REVIEW.md  WORKLOG.md  alembic.ini  bash.exe.stackdump  check_imports.py  crawl.ipynb  docker-compose.prod.yml  docker-compose.yml  main.py  merge_helper.py  modify_llm.py  pyproject.toml  refactor.md  requirements.txt  resolve_conflicts.py  scratch.py  start.sh  test_stream.py  tutor_flow.mmd
.antigravity/: settings.json
.claude/: settings.json  settings.local.json
.codex/: hooks.json
RECAI-PLAN/: README.md  phase-01-kg-db-foundation.md  phase-02-course-aware-kg.md  phase-03-user-state-aggregation.md  phase-04-recommendation-engine.md  phase-05-evaluation-and-guardrails.md  phase-06-ai-consumers.md  recai.md
alembic/: env.py
architecture/: ux.md
data/: kg_bridges.yaml  modules.json  p2_output_rationale_repaired.json  question_bank.json  topics.json
docs/: DATABASE_REVIEW.md  JOURNAL.md  LEGACY_SCHEMA_CLEANUP_PLAN.md  MAIN_TO_HYBRID_PORT_TASKS.md  MAIN_VS_HYBRID_REVIEW.md  PRD.md  PRODUCTION_DB_INTEGRATION_HANDOFF.md  SCHEMA_BRANCH_SNAPSHOT_2026-04-23.md  SCHEMA_V1_RECONCILIATION.md  UI_V2_PLAN.md  WORKLOG.md  branch-hybrid-merge-plan.md  course-first-refactor-architecture.md  course-platform-architecture.md  hybrid-integration-review.md  hybrid-integration-tasks.md  hybrid-merge-conflicts.md  hybrid-system-design.md
frontend/: .dockerignore  .env.example  Dockerfile  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
notebooks/: Notebook-crawl-data-course-ytb.ipynb  crawl.ipynb  deberta_mmbert_mooccubex_cs_colab.ipynb  deberta_mmbert_mooccubex_cs_colab_rebalanced.ipynb  deberta_modernbert_finetune_combo_colab.ipynb  deberta_nli_direction_scoring_colab.ipynb  modernbert_edge_scoring_colab.ipynb  modernbert_edge_scoring_masked_colab.ipynb  modernbert_large_edge_scoring_masked_colab.ipynb  scibert_edge_scoring_masked_colab.ipynb
prompts/: 1_question_bank.txt  2_item_calibration.txt  3_quality_assurance.txt  4_item_phase_map.txt  lecture_extraction_prompt.txt
scripts/: discord_bot_test_loop.py  ingest_cs231n.py  init_db.sql  install_deps.sh  langgraph_deps.sh  log_hook.py  migrate_sqlite.py  modify_app.py  save_ui_cycle.ps1  scan_components.py  seed.py  seed_data.py  seed_db.py  seed_lectures.py  submit_log.py  sync_codex_transcript.py
src/: agent.py  config.py  constants.py  data_paths.py  database.py  exception_handlers.py  exceptions.py  redis_client.py  tools.py
tests/: conftest.py  test_alembic_heads.py  test_app_lifespan.py  test_assessment_question_selector_integration.py  test_auth_canonical_skill_overview.py  test_auth_dependency.py  test_auth_legacy_guard.py  test_auth_logout.py  (+30 more)
(+2138 files in other folders)
