[project]
name = "a20-app-049"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiolimiter>=1.2.1",
    "fastapi>=0.135.3",
    "google-genai>=1.70.0",
    "langchain-core>=1.2.28",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openai>=2.31.0",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.49",
    "srt>=3.5.3",
    "streamlit>=1.56.0",
    "sympy>=1.14.0",
    "uvicorn>=0.44.0",
]
